# rust-os

./: Cargo.toml  README.md  TODO.txt  aarch64-qemu.ld  aarch64-unknown-none.json  aarch64_qemu.id  notes.txt  other-pc-aarch64-unkown-none.json  run.sh.old
.cargo/: config.toml
src/: .main.rs.swp  main.rs  start.s  start.s.commented  vga_buffer.rs  vga_driver.rs
x86_legacy/: x86_64-os.json
